--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^5.14.11",
     "axios": "^1.4.0",
     "date-fns": "^4.1.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
