Implement session expiration and onboarding UX
Adds global session expiration handling with JWT validation, automatic logout, and user notifications. Introduces onboarding modal for new users and a security info dialog after login. Updates protected route logic, improves logout handling, and synchronizes API gateway URLs for local and production environments. Minor UI fixes for logout buttons and registration flow.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # En desarrollo local, deja esto vacío para usar el proxy de Vite (vite.config.ts)
 # Para producción, establece la URL del API Gateway real
-# VITE_API_GATEWAY_URL=http://localhost:8080
+# VITE_API_GATEWAY_URL=http://98.92.31.103:8080
