--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # Rename this file to .env and set your API gateway base URL.
-VITE_API_GATEWAY_URL=http://localhost:8080
+VITE_API_GATEWAY_URL=http://98.92.31.103:8080
